force-app/main/default/objects/B25__Reservation_Display_Context__c/B25__Reservation_Display_Context__c.object-meta.xml
<CustomObject>
    <description>Defines the context in which a Hover Definition or/and a Reservation Title Group should be used. The Context lookups are ordered according to their importance. The Context with the highest matching Context lookups and no other conflicting lookups will be used. Empty values do not count as conflicts or matches.</description>
    <label>Display Context</label>
    <nameField>
        <label>Display Context Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Display Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>