force-app/main/default/objects/B25__Reservation_Display_Context__c/fields/B25__Calendar__c.field-meta.xml
<CustomField>
    <fullName>B25__Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Calendar of this context. When filled, only Reservations displayed in this Calendar will match with this context.</description>
    <inlineHelpText>Le calendrier de ce contexte. Lorsque ce champ est rempli, seules les réservations affichées dans ce calendrier correspondront à ce contexte.</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>B25__Calendar__c</referenceTo>
    <relationshipLabel>Reservation Display Contexts</relationshipLabel>
    <relationshipName>Reservation_Display_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>