force-app/main/default/objects/B25__Reservation_Display_Context__c/fields/B25__Hover_Definition__c.field-meta.xml
<CustomField>
    <fullName>B25__Hover_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Hover Definition that should be shown in this context.</description>
    <inlineHelpText>La définition de survol qui doit être affichée dans ce contexte.</inlineHelpText>
    <label>Hover Definition</label>
    <referenceTo>B25__Reservation_Display__c</referenceTo>
    <relationshipLabel>Contexts</relationshipLabel>
    <relationshipName>Reservation_Display_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>