force-app/main/default/objects/B25__Reservation_Display_Context__c/fields/B25__Reservation_Title_Group__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Title_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Reservation Title Group that should be shown in this context.</description>
    <inlineHelpText>La groupe de titre de la réservation qui doit être affiché dans ce contexte.</inlineHelpText>
    <label>Reservation Title Group</label>
    <referenceTo>B25__Reservation_Title_Group__c</referenceTo>
    <relationshipLabel>Contexts</relationshipLabel>
    <relationshipName>Reservation_Display_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>