force-app/main/default/objects/B25__Reservation_Display_Context__c/fields/B25__Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Reservation Type of this context. When filled, only Reservations with this Reservation Type will match with this context.</description>
    <inlineHelpText>Le type de réservation de ce contexte. Lorsque ce champ est rempli, seules les réservations avec ce type de réservation correspondront à ce contexte.</inlineHelpText>
    <label>Reservation Type</label>
    <referenceTo>B25__Reservation_Type__c</referenceTo>
    <relationshipLabel>Displays</relationshipLabel>
    <relationshipName>Reservation_Display_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>