force-app/main/default/objects/B25__Reservation_Display_Context__c/fields/B25__Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Resource Type of this context. When filled, only Reservations in a Resource with this Resource Type will match with this context.</description>
    <inlineHelpText>Le type de ressource de ce contexte. Lorsque ce champ est rempli, seules les réservations dans une ressource avec ce type de ressource correspondront à ce contexte.</inlineHelpText>
    <label>Resource Type</label>
    <referenceTo>B25__Resource_Type__c</referenceTo>
    <relationshipLabel>Displays</relationshipLabel>
    <relationshipName>Reservation_Display_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>