force-app/main/default/objects/B25__Reservation_Display_Context__c/fields/B25__Sharing_Identifier__c.field-meta.xml
<CustomField>
    <fullName>B25__Sharing_Identifier__c</fullName>
    <description>If you use Sharing to assign separate contexts to separate users, use this field to identify what Public Groups this context is shared with. Booker25 will use this information to allow duplicate contexts if they are shared with different users.</description>
    <inlineHelpText>Si vous utilisez le partage pour attribuer des contextes distincts à des utilisateurs distincts, utilisez ce champ pour identifier les groupes publics avec lesquels ce contexte est partagé. Booker25 utilisera cette information pour autoriser les contextes dupliqués s’ils sont partagés avec différents utilisateurs.</inlineHelpText>
    <label>Sharing Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>