force-app/main/default/objects/B25__Reservation_Display_Context__c/fields/B25__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__SObject_Type__c</fullName>
    <description>The Api Name of the SObject this context is defined for.</description>
    <inlineHelpText>Le nom API du SObjet pour lequel ce contexte est défini.</inlineHelpText>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>