force-app/main/default/objects/B25__Reservation_Display_Context__c/fields/B25__View__c.field-meta.xml
<CustomField>
    <fullName>B25__View__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The View of this context. When filled, only Reservations displayed in this View will match with this context.</description>
    <inlineHelpText>La vue de ce contexte. Lorsque ce champ est rempli, seules les réservations affichées dans cette vue correspondront à ce contexte.</inlineHelpText>
    <label>View</label>
    <referenceTo>B25__View__c</referenceTo>
    <relationshipLabel>Displays</relationshipLabel>
    <relationshipName>Reservation_Display_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>