force-app/main/default/objects/B25__Reservation_Display_Context__c/recordTypes/B25__Reservation_Display_Context.recordType-meta.xml
<RecordType>
    <fullName>B25__Reservation_Display_Context</fullName>
    <active>true</active>
    <label>Reservation Display Context</label>
</RecordType>