force-app/main/default/objects/B25__Reservation_Display_Context__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>B25__Resource_Type__c</columns>
    <columns>B25__Reservation_Type__c</columns>
    <columns>B25__View__c</columns>
    <columns>B25__Calendar__c</columns>
    <columns>B25__Reservation_Title_Group__c</columns>
    <columns>B25__Hover_Definition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>